crates/lash/tests/ui/queued_turn_run_requires_scope.rs
async fn check(session: lash::LashSession) {
    let _ = session.next_queued_turn().run().await;
}

fn main() {}
